--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,99 @@
+# 基础配置
 title: 小周工作日记
 description: 再努力一些！
-baseurl: ""  
-theme: null  
+baseurl: ""
+theme: null 
+timezone: Asia/Shanghai
 
+# 集合配置（按分类管理文章）
 collections:
-  categories:
+  java_basic:
     output: true
-    permalink: /:path/
+    permalink: /java_basic/:title/
+  java_jvm:
+    output: true
+    permalink: /java_jvm/:title/
+  java_juc:
+    output: true
+    permalink: /java_juc/:title/
+  java_ssm:
+    output: true
+    permalink: /java_ssm/:title/
+  database_mysql:
+    output: true
+    permalink: /database_mysql/:title/
+  database_redis:
+    output: true
+    permalink: /database_redis/:title/
+  project:
+    output: true
+    permalink: /project/:title/    
+
+# 默认布局
 defaults:
   - scope:
-      path: ""
-      type: categories
+      path: "_java_basic"  
+      type: "java_basic"
     values:
-      layout: category
+      layout: "post"
+      category: "java_basic"
+  - scope:
+      path: "_java_juc"    
+      type: "java_juc"
+    values:
+      layout: "post"
+      category: "java_juc"
+  - scope:
+      path: "_java_jvm"   
+      type: "java_jvm"
+    values:
+      layout: "post"
+      category: "java_jvm"
+ - scope:
+      path: "_java_ssm"   
+      type: "java_ssm"
+    values:
+      layout: "post"
+      category: "java_ssm"
+  - scope:
+      path: "_database_mysql"   
+      type: "database_mysql"
+    values:
+      layout: "post"
+      category: "database_mysql"
+  - scope:
+      path: "_database_redis"   
+      type: "database_reids"
+    values:
+      layout: "post"
+      category: "database_redis"
+  - scope:
+      path: "-project"   
+      type: "project"
+    values:
+      layout: "post"
+      category: "project"
+
+# 插件
 plugins:
   - jekyll-toc
-  
+  - jekyll-paginate
+
+# 导航菜单 (与集合对应)
 navigation:
   - title: 首页
     url: /
-  - title: 关于
-    url: /about
-  - title: Java基础
-    url: /java
-  - title: Java并发
-    url: /java_juc  
-  - title: Database
-    url: /database
+  - title: JAVA
+    url: /java_basic/
+  - title: JVM
+    url: /java_jvm/ 
+  - title: JUC
+    url: /java_juc/ 
+  - title: SSM
+    url: /java_ssm/   
+  - title: MYSQL
+    url: /database_mysql/
+  - title: REDIS
+    url: /database_redis/
+  - title: PROJECT
+    url: /project
