--- a/_config.yml
+++ b/_config.yml
@@ -42,36 +42,43 @@ defaults:
       type: "java_basic"
     values:
       category: "java"
+      layout: "post"
   - scope:
       path: "_java_juc"    
       type: "java_juc"
     values:
       category: "juc"
+      layout: "post"
   - scope:
       path: "_java_jvm"   
       type: "java_jvm"
     values:
       category: "jvm"
+      layout: "post"
   - scope:
       path: "_java_ssm"   
       type: "java_ssm"
     values:
       category: "ssm"
+      layout: "post"
   - scope:
       path: "_database_mysql"   
       type: "database_mysql"
     values:
       category: "mysql"
+      layout: "post"
   - scope:
       path: "_database_redis"   
       type: "database_redis"
     values:
       category: "redis"
+      layout: "post"
   - scope:
       path: "_project"   
       type: "project"
     values:
       category: "project"
+      layout: "post"
 
 # 插件
 plugins:
