--- a/_config.yml
+++ b/_config.yml
@@ -43,42 +43,49 @@ defaults:
     values:
       slug: "java-basis"
       layout: "post"
+      category: "java" 
   - scope:
       path: "_java_juc"    
       type: "java_juc"
     values:
       slug: "java-juc"
       layout: "post"
+      category: "juc" 
   - scope:
       path: "_java_jvm"   
       type: "java_jvm"
     values:
       slug: "java-jvm"
       layout: "post"
+      category: "jvm" 
   - scope:
       path: "_java_ssm"   
       type: "java_ssm"
     values:
       slug: "java-ssm"
       layout: "post"
+      category: "ssm" 
   - scope:
       path: "_database_mysql"   
       type: "database_mysql"
     values:
       slug: "database_mysql"
       layout: "post"
+      category: "mysql" 
   - scope:
       path: "_database_redis"   
       type: "database_redis"
     values:
       slug: "database_redis"
       layout: "post"
+      category: "redis" 
   - scope:
       path: "_project"   
       type: "project"
     values:
       category: "project"
       layout: "post"
+      category: "project" 
 
 # 插件
 plugins:
